Modela User, Employee, Especialist e outras entidades relacionadas a essas entidades derivantes de User
